Assign gateway to network-server.
