# api/swagger/gateway.swagger.json
@@ -583,6 +583,11 @@
           "type": "string",
           "format": "int64",
           "description": "ID of the channel-configuration."
+        },
+        "networkServerID": {
+          "type": "string",
+          "format": "int64",
+          "description": "ID of the network-server to which the gateway is connected."
         }
       }
     },
@@ -783,6 +788,11 @@
           "type": "string",
           "format": "int64",
           "description": "ID of the channel-configuration."
+        },
+        "networkServerID": {
+          "type": "string",
+          "format": "int64",
+          "description": "ID of the network-server to which the gateway is connected."
         }
       }
     },
@@ -836,6 +846,11 @@
           "type": "string",
           "format": "int64",
           "description": "ID of the organization to which this gateway belongs."
+        },
+        "networkServerID": {
+          "type": "string",
+          "format": "int64",
+          "description": "ID of the network-server to which the gateway is connected."
         }
       }
     },
